--- a/aboutUs.html
+++ b/aboutUs.html
@@ -159,51 +159,98 @@
                     <p>We provide you a better service. you have no complain about our service, it’s guaranteed.</p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-3">
-                    <div class="p-folio_item">
-                        <img width="100%" src="assets/images/about_page_ourTeam-1.png" alt="" class="img-fluid">
-                    <div class="ourteamOverlay d-flex justify-content-center align-items-end text-center">
-                        <div class="overlay_content">
-                            <h3>Monica Brown</h3>
-                            <p>Head Architect</p>
+                <div class="row  pfSlider_container">
+                    <div class="col-lg-3 p-folio_item">
+                        <div class="p-folio_img">
+                           <img width="100%" src="assets/images/about_page_ourTeam-1.png" alt="" class="img-fluid">
                         </div>
-                    </div>
-                    </div>
-                    </div>
-                    <!-- <div class="col-lg-3">
-                    <div class="p-folio_item">
-                        <img src="assets/images/pfolio_2.png" alt="" class="img-fluid">
-                    <div class="overlay d-flex justify-content-center align-items-end text-center">
-                        <div class="overlay_content">
-                            <h3>Architectural</h3>
-                            <p>Building/Architect</p>
+                        <div class="p-folio_title_section d-flex justify-content-center">
+                           <div class="title text-center">
+                              <h2>Moniaca Brown</h2>
+                              <p>Head Architect</p>
+                           </div>
+                           <div class="p-folio_overlay d-flex justify-content-center">
+                              <div class="text-center">
+                                 <h2>Moniaca Brown</h2>
+                                 <p>Head Architect</p>
+                                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                 <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                 <a href="#"><i class="fa-brands fa-behance"></i></a>
+                                 <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+                              </div>
+                           </div>
                         </div>
-                    </div>
-                    </div>
-                    </div>
-                    <div class="col-lg-3">
-                    <div class="p-folio_item">
-                        <img src="assets/images/pfolio_3.jpg" alt="" class="img-fluid">
-                    <div class="overlay d-flex justify-content-center align-items-end text-center">
-                        <div class="overlay_content">
-                            <h3>Architectural</h3>
-                            <p>Building/Architect</p>
+                    </div> 
+
+                    <div class="col-lg-3 p-folio_item">
+                        <div class="p-folio_img">
+                           <img width="100%" src="assets/images/about_page_ourTeam-1.png" alt="" class="img-fluid">
                         </div>
-                    </div>
-                    </div>
-                    </div>
-                    <div class="col-lg-3">
-                    <div class="p-folio_item">
-                        <img src="assets/images/pfolio_4.png" alt="" class="img-fluid">
-                    <div class="overlay d-flex justify-content-center align-items-end text-center">
-                        <div class="overlay_content">
-                            <h3>Architectural</h3>
-                            <p>Building/Architect</p>
+                        <div class="p-folio_title_section d-flex justify-content-center">
+                           <div class="title text-center">
+                              <h2>Moniaca Brown</h2>
+                              <p>Head Architect</p>
+                           </div>
+                           <div class="p-folio_overlay d-flex justify-content-center">
+                              <div class="text-center">
+                                 <h2>Moniaca Brown</h2>
+                                 <p>Head Architect</p>
+                                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                 <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                 <a href="#"><i class="fa-brands fa-behance"></i></a>
+                                 <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+                              </div>
+                           </div>
                         </div>
-                    </div>
-                    </div>
-                    </div> -->
+                    </div> 
+
+                    <div class="col-lg-3 p-folio_item">
+                        <div class="p-folio_img">
+                           <img width="100%" src="assets/images/about_page_ourTeam-1.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="p-folio_title_section d-flex justify-content-center">
+                           <div class="title text-center">
+                              <h2>Moniaca Brown</h2>
+                              <p>Head Architect</p>
+                           </div>
+                           <div class="p-folio_overlay d-flex justify-content-center">
+                              <div class="text-center">
+                                 <h2>Moniaca Brown</h2>
+                                 <p>Head Architect</p>
+                                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                 <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                 <a href="#"><i class="fa-brands fa-behance"></i></a>
+                                 <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+                              </div>
+                           </div>
+                        </div>
+                    </div> 
+
+                    <div class="col-lg-3 p-folio_item">
+                        <div class="p-folio_img">
+                           <img width="100%" src="assets/images/about_page_ourTeam-1.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="p-folio_title_section d-flex justify-content-center">
+                           <div class="title text-center">
+                              <h2>Moniaca Brown</h2>
+                              <p>Head Architect</p>
+                           </div>
+                           <div class="p-folio_overlay d-flex justify-content-center">
+                              <div class="text-center">
+                                 <h2>Moniaca Brown</h2>
+                                 <p>Head Architect</p>
+                                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                 <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                 <a href="#"><i class="fa-brands fa-behance"></i></a>
+                                 <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+                              </div>
+                           </div>
+                        </div>
+                    </div> 
                 </div>
             </div>
         </section>
