--- a/aboutUs.html
+++ b/aboutUs.html
@@ -151,16 +151,26 @@
         <!-- About Section_2 End -->
 
         <!-- Our Team Section Start -->
-        <section id="port_folio">
+        <section id="blog">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-6 text-center heading">
+                    <div class="col-lg-6 blog_heading text-center">
                     <h2>Our Team</h2>
                     <p>We provide you a better service. you have no complain about our service, it’s guaranteed.</p>
                     </div>
                 </div>
-                <div class="row  pfSlider_container">
-                    <div class="col-lg-3 p-folio_item">
+            </div>
+            <div class="blog_slider_icon">
+               <button class="blogteam_icon_prev">
+                  <span><i class="fa-solid fa-chevron-left"></i></span>
+               </button>
+               <button class="blogteam_icon_next">
+                  <span><i class="fa-solid fa-chevron-right"></i></span>
+               </button>
+            </div>
+            <div class="container">
+               <div class="pfSlider_container">
+                    <div class="px-2 p-folio_item">
                         <div class="p-folio_img">
                            <img width="100%" src="assets/images/about_page_ourTeam-1.png" alt="" class="img-fluid">
                         </div>
@@ -183,9 +193,9 @@
                         </div>
                     </div> 
 
-                    <div class="col-lg-3 p-folio_item">
+                    <div class="px-2 p-folio_item">
                         <div class="p-folio_img">
-                           <img width="100%" src="assets/images/about_page_ourTeam-1.png" alt="" class="img-fluid">
+                           <img width="100%" src="assets/images/about_page _team_img2.png" alt="" class="img-fluid">
                         </div>
                         <div class="p-folio_title_section d-flex justify-content-center">
                            <div class="title text-center">
@@ -206,9 +216,9 @@
                         </div>
                     </div> 
 
-                    <div class="col-lg-3 p-folio_item">
+                    <div class="px-2 p-folio_item">
                         <div class="p-folio_img">
-                           <img width="100%" src="assets/images/about_page_ourTeam-1.png" alt="" class="img-fluid">
+                           <img width="100%" src="assets/images/about_page_img3.png" alt="" class="img-fluid">
                         </div>
                         <div class="p-folio_title_section d-flex justify-content-center">
                            <div class="title text-center">
@@ -229,9 +239,9 @@
                         </div>
                     </div> 
 
-                    <div class="col-lg-3 p-folio_item">
+                    <div class="px-2 p-folio_item">
                         <div class="p-folio_img">
-                           <img width="100%" src="assets/images/about_page_ourTeam-1.png" alt="" class="img-fluid">
+                           <img width="100%" src="assets/images/about_page_img3.png" alt="" class="img-fluid">
                         </div>
                         <div class="p-folio_title_section d-flex justify-content-center">
                            <div class="title text-center">
