--- a/aboutUs.html
+++ b/aboutUs.html
@@ -169,95 +169,22 @@
                </button>
             </div>
             <div class="container">
-               <div class="pfSlider_container">
-                    <div class="px-2 p-folio_item">
+               <div class=" row pfSlider_container"> 
+                    <div class="col-lg-4 p-folio_item">
                         <div class="p-folio_img">
-                           <img width="100%" src="assets/images/about_page_ourTeam-1.png" alt="" class="img-fluid">
+                           <img width="100%" src="assets/images/about_us_ourTeam_img01.png" alt="" class="img-fluid">
                         </div>
-                        <div class="p-folio_title_section d-flex justify-content-center">
+                        <div class="p-folio_title_section">
                            <div class="title text-center">
                               <h2>Moniaca Brown</h2>
                               <p>Head Architect</p>
                            </div>
-                           <div class="p-folio_overlay d-flex justify-content-center">
-                              <div class="text-center">
-                                 <h2>Moniaca Brown</h2>
-                                 <p>Head Architect</p>
-                                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                 <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                                 <a href="#"><i class="fa-brands fa-behance"></i></a>
-                                 <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
-                              </div>
-                           </div>
-                        </div>
-                    </div> 
-
-                    <div class="px-2 p-folio_item">
-                        <div class="p-folio_img">
-                           <img width="100%" src="assets/images/about_page _team_img2.png" alt="" class="img-fluid">
-                        </div>
-                        <div class="p-folio_title_section d-flex justify-content-center">
-                           <div class="title text-center">
-                              <h2>Moniaca Brown</h2>
-                              <p>Head Architect</p>
-                           </div>
-                           <div class="p-folio_overlay d-flex justify-content-center">
-                              <div class="text-center">
-                                 <h2>Moniaca Brown</h2>
-                                 <p>Head Architect</p>
-                                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                 <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                                 <a href="#"><i class="fa-brands fa-behance"></i></a>
-                                 <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
-                              </div>
-                           </div>
-                        </div>
-                    </div> 
-
-                    <div class="px-2 p-folio_item">
-                        <div class="p-folio_img">
-                           <img width="100%" src="assets/images/about_page_img3.png" alt="" class="img-fluid">
-                        </div>
-                        <div class="p-folio_title_section d-flex justify-content-center">
-                           <div class="title text-center">
-                              <h2>Moniaca Brown</h2>
-                              <p>Head Architect</p>
-                           </div>
-                           <div class="p-folio_overlay d-flex justify-content-center">
-                              <div class="text-center">
-                                 <h2>Moniaca Brown</h2>
-                                 <p>Head Architect</p>
-                                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                 <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                                 <a href="#"><i class="fa-brands fa-behance"></i></a>
-                                 <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
-                              </div>
-                           </div>
-                        </div>
-                    </div> 
-
-                    <div class="px-2 p-folio_item">
-                        <div class="p-folio_img">
-                           <img width="100%" src="assets/images/about_page_img3.png" alt="" class="img-fluid">
-                        </div>
-                        <div class="p-folio_title_section d-flex justify-content-center">
-                           <div class="title text-center">
-                              <h2>Moniaca Brown</h2>
-                              <p>Head Architect</p>
-                           </div>
-                           <div class="p-folio_overlay d-flex justify-content-center">
-                              <div class="text-center">
-                                 <h2>Moniaca Brown</h2>
-                                 <p>Head Architect</p>
-                                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                 <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                                 <a href="#"><i class="fa-brands fa-behance"></i></a>
-                                 <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
-                              </div>
+                           <div class="social_icon text-center">
+                              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                              <a href="#"><i class="fa-brands fa-behance"></i></a>
+                              <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
                            </div>
                         </div>
                     </div> 
