--- a/index.html
+++ b/index.html
@@ -341,19 +341,19 @@
             <div class="container h-100">
                <div class="row h-100 align-items-center text-center">
                   <div class="col-lg-3">
-                     <h2>222</h2>
+                     <h2 class="counter">222</h2>
                      <p>Satisfied Client</p>
                   </div>
                   <div class="col-lg-3">
-                     <h2>333</h2>
+                     <h2 class="counter">333</h2>
                      <p>Total Employees</p>
                   </div>
                   <div class="col-lg-3">
-                     <h2>444</h2>
+                     <h2 class="counter">444</h2>
                      <p>Finished Project</p>
                   </div>
                   <div class="col-lg-3">
-                     <h2>555</h2>
+                     <h2 class="counter">555</h2>
                      <p>Happy Customer</p>
                   </div>
                </div>
@@ -762,6 +762,9 @@
       <script src="./assets/js/slick.min.js"></script>
       <!-- Bootstrap Js Link -->
       <script src="./assets/js/bootstrap.min.js"></script>
+      <!-- Counter Up Js link -->
+      <script src="./assets/js/waypoints.min.js"></script>
+      <script src="./assets/js/jquery.counterup.min.js"></script>
       <!-- Main Js Link -->
       <script src="./assets/js/script.js"></script>
 
