--- a/aboutUs.html
+++ b/aboutUs.html
@@ -160,17 +160,71 @@
                     </div>
                 </div>
             </div>
-            <div class="blog_slider_icon">
-               <button class="blogteam_icon_prev">
-                  <span><i class="fa-solid fa-chevron-left"></i></span>
-               </button>
-               <button class="blogteam_icon_next">
-                  <span><i class="fa-solid fa-chevron-right"></i></span>
-               </button>
-            </div>
             <div class="container">
-               <div class=" row pfSlider_container"> 
-                    <div class="col-lg-4 p-folio_item">
+               <div class="blog_slider_icon">
+                  <button class="blogteam_icon_prev">
+                     <span><i class="fa-solid fa-chevron-left"></i></span>
+                  </button>
+                  <button class="blogteam_icon_next">
+                     <span><i class="fa-solid fa-chevron-right"></i></span>
+                  </button>
+               </div>
+               <div class="pfSlider_container"> 
+                    <div class="px-2 p-folio_item">
+                        <div class="p-folio_img">
+                           <img width="100%" src="assets/images/about_us_ourTeam_img01.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="p-folio_title_section">
+                           <div class="title text-center">
+                              <h2>Moniaca Brown</h2>
+                              <p>Head Architect</p>
+                           </div>
+                           <div class="social_icon text-center">
+                              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                              <a href="#"><i class="fa-brands fa-behance"></i></a>
+                              <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+                           </div>
+                        </div>
+                    </div> 
+                    <div class="px-2 p-folio_item">
+                        <div class="p-folio_img">
+                           <img width="100%" src="assets/images/about_us_ourTeam_img01.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="p-folio_title_section">
+                           <div class="title text-center">
+                              <h2>Moniaca Brown</h2>
+                              <p>Head Architect</p>
+                           </div>
+                           <div class="social_icon text-center">
+                              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                              <a href="#"><i class="fa-brands fa-behance"></i></a>
+                              <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+                           </div>
+                        </div>
+                    </div> 
+                    <div class="px-2 p-folio_item">
+                        <div class="p-folio_img">
+                           <img width="100%" src="assets/images/about_us_ourTeam_img01.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="p-folio_title_section">
+                           <div class="title text-center">
+                              <h2>Moniaca Brown</h2>
+                              <p>Head Architect</p>
+                           </div>
+                           <div class="social_icon text-center">
+                              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                              <a href="#"><i class="fa-brands fa-behance"></i></a>
+                              <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+                           </div>
+                        </div>
+                    </div> 
+                    <div class="px-2 p-folio_item">
                         <div class="p-folio_img">
                            <img width="100%" src="assets/images/about_us_ourTeam_img01.png" alt="" class="img-fluid">
                         </div>
