--- a/index.html
+++ b/index.html
@@ -580,18 +580,24 @@
                    <div class="row justify-content-center">
                     <div class="slider_nav col-lg-6">
                         <div class="slider_nav-img">
-                           <div>
-                            <img src="assets/images/testimonial_img_1.png" alt="" class="img-fluid mx-auto">
+                           <div class="slider_nav_inner">
+                              <img src="assets/images/testimonial_img_1.png" alt="" class="img-fluid mx-auto">
                             </div>
                         </div>
                         <div class="slider_nav-img">
-                        <img src="assets/images/testimonial_img_2.png" alt="" class="img-fluid mx-auto">
+                           <div class="slider_nav_inner">
+                              <img src="assets/images/testimonial_img_2.png" alt="" class="img-fluid mx-auto">
+                           </div>
                         </div>
                         <div class="slider_nav-img">
-                        <img src="assets/images/testimonial_img_3.png" alt="" class="img-fluid mx-auto">
+                           <div class="slider_nav_inner">
+                              <img src="assets/images/testimonial_img_3.png" alt="" class="img-fluid mx-auto">
+                           </div>
                         </div>
                         <div class="slider_nav-img">
-                        <img src="assets/images/testimonial_img_2.png" alt="" class="img-fluid mx-auto">
+                           <div class="slider_nav_inner">
+                              <img src="assets/images/testimonial_img_2.png" alt="" class="img-fluid mx-auto">
+                           </div>
                         </div>
                      </div>
                    </div>
