--- a/ourPortfolio.html
+++ b/ourPortfolio.html
@@ -73,11 +73,11 @@
                      <li class="nav-item">
                         <a href="#" class="nav-link">Service</a>
                      </li>
-                     <li class="nav-item active">
+                     <li class="nav-item">
                         <a href="aboutUs.html" class="nav-link">About Us</a>
                      </li>
-                     <li class="nav-item">
-                        <a href="#" class="nav-link">Portfolio</a>
+                     <li class="nav-item active">
+                        <a href="ourPortfolio.html" class="nav-link">Portfolio</a>
                      </li>
                      <li class="nav-item">
                         <a href="#" class="nav-link">Our Blog</a>
@@ -101,8 +101,8 @@
                 <div class="container h-100">
                    <div class="row h-100 align-items-center text-center">
                       <div class="heading">
-                         <h1>ABOUT US</h1>
-                         <p>Home >> <span>About Us</span></p>
+                         <h1>OUR PORTFOLIO</h1>
+                         <p>Home >> <span>Portfolio</span></p>
                       </div>
                    </div>
                 </div>
@@ -110,44 +110,7 @@
         <!-- About Us Section_1 End -->
 
         <!-- About Section_2 Start -->
-        <section id="about">
-            <div class="row my-lg-5">
-                <div class="col-lg-5 g-0 about_img about_us_img">
-                    <img src="assets/images/about_us_page_img_1.png" alt="" class="img-fluid" >
-                </div>
-                <div class="col-lg-7 about_info">
-                    <div class="about_title py-lg-3 mx-lg-4">
-                        <h2 style="font-size: 35px;">About Produstry</h2>
-                        <p class="py-lg-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsumas been the industry's standard dummy text ever since the 1500s, when an unknown rinter took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
-                        <p class="py-lg-2">remaining essentially unchanged. It was popularised in the 1960s with the release ofetraset sheets containing Lorem Ipsum passages, and more recently with desktop publishingtware.
-                        </p>
-                        <p class="py-lg-2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- GAP -->
-        <section id="about">
-            <div class="row my-lg-5">
-                <div class="col-lg-7 about_info px-0">
-                    <div class="about_title title_section py-lg-3 ">
-                        <h2 style="font-size: 35px;">Our Mission</h2>
-                        <p class="py-lg-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                        <div class="checkbox">
-                            <div class="py-lg-2"><i class="fa-solid fa-check"></i><span>We can make a dummy project for you at first then we do our work.</span></div>
-                            <div class="py-lg-2"><i class="fa-solid fa-check"></i><span>Secondly, we make a sketch then we start our work as our shetch layout.</span></div>
-                            <div class="py-lg-2"><i class="fa-solid fa-check"></i><span>We divide our works accordingly to the employees who are the best for work.</span></div>
-                            <div class="py-lg-2"><i class="fa-solid fa-check"></i><span>Always we make a instructor who give them a command to the workers.</span></div>
-                            <div class="py-lg-2"><i class="fa-solid fa-check"></i><span>After finishing the work we observed that and if found any problem we’ll fix that.</span></div>
-                            <div class="py-lg-2"><i class="fa-solid fa-check"></i><span>Finally we handover the project when it is done beautifully otherwise not.</span></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-5 g-0 about_img about_us_img">
-                    <img src="assets/images/about_us_page_img_2.png" alt="" class="img-fluid" >
-                </div>
-            </div>
-        </section>
+       
         <!-- About Section_2 End -->
 
         <!-- Our Team Section Start -->
