--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <a href="aboutUs.html" class="nav-link">About Us</a>
                      </li>
                      <li class="nav-item">
-                        <a href="#" class="nav-link">Portfolio</a>
+                        <a href="portfolio.html" class="nav-link">Portfolio</a>
                      </li>
                      <li class="nav-item">
                         <a href="#" class="nav-link">Our Blog</a>
