--- a/aboutUs.html
+++ b/aboutUs.html
@@ -77,13 +77,13 @@
                         <a href="aboutUs.html" class="nav-link">About Us</a>
                      </li>
                      <li class="nav-item">
-                        <a href="#" class="nav-link">Portfolio</a>
+                        <a href="portfolio.html" class="nav-link">Portfolio</a>
                      </li>
                      <li class="nav-item">
                         <a href="#" class="nav-link">Our Blog</a>
                      </li>
                      <li class="nav-item">
-                        <a href="#" class="nav-link">Contact Us</a>
+                        <a href="contactUs.html" class="nav-link">Contact Us</a>
                      </li>
                   </ul>
 
