--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <a href="#" class="nav-link">Our Blog</a>
                      </li>
                      <li class="nav-item">
-                        <a href="#" class="nav-link">Contact Us</a>
+                        <a href="contactUs.html" class="nav-link">Contact Us</a>
                      </li>
                   </ul>
 
