--- a/contactUs.html
+++ b/contactUs.html
@@ -96,7 +96,84 @@
         </header>
         <!-- Header Section End -->
 
-        
+        <!-- Contact Banner Section Start -->
+        <section id="aboutUs" style="margin-bottom: 100px;">
+                <div class="container h-100">
+                   <div class="row h-100 align-items-center text-center">
+                      <div class="heading">
+                         <h1>contact us</h1>
+                         <p>Home >> <span>contact us</span></p>
+                      </div>
+                   </div>
+                </div>
+        </section>
+        <!-- Contact Banner Section End -->
+
+        <!-- Via Contact Section Start -->
+        <section id="via_contact">
+            <div class="container">
+                <div class="row contact_details text-center">
+                    <div class="col-lg-4 contactSite px-0 mx-0">
+                        <i class="fa-solid fa-location-dot d-block"></i>
+                        <div class="link">
+                            <a href="#0">69, Halsey st. New York, NY 10002, Park street Avenue United Staes (US).</a>
+                        </div>
+                    </div>
+                    
+                    <div class="col-lg-4 contactSite px-0 mx-0">
+                        <i class="fa-solid fa-envelope d-block"></i>
+                        <div class="link">
+                            <a href="#">Produstry@industry.com,</a>
+                            <a href="#">industry@produstry.com</a> <br>
+                            <a href="#">Admin@info.com,</a>
+                            <a href="#">info@admin.com</a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 contactSite px-0 mx-0">
+                        <i class="fa-solid fa-earth-americas d-block"></i>
+                        <div class="link">
+                            <a href="#0">www.produstry-industry.com,</a>
+                            <a href="#0">www.produstry-info.com</a>
+                            <a href="#0">www.production-industry.com</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Via Contact Section End -->
+
+        <!-- Google Map Section Start -->
+        <section id="g-map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3025.642054960299!2d-73.9531070852724!3d40.68185514739733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b908645aaab%3A0xb59d16d5eeeb1471!2sYUEMENGZI!5e0!3m2!1sen!2sbd!4v1670358926603!5m2!1sen!2sbd" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+        <!-- Google Map Section End -->
+
+        <!-- Newsletter Section Start -->
+        <section id="newsletter">
+            <div class="container h-100">
+                <div class="row text-center h-100 justify-content-center">
+                    <div class=" col-lg-6 heading">
+                        <h2>Sign up for Newsletter</h2>
+                        <p>We provide you a better service. you have no complain about our service, it’s guaranteed.</p>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="backround">
+                        <div class="form">
+                            <form action="">
+                                <input type="text" placeholder="Name">
+                                <input class="name" type="email" placeholder="E-mail">
+                                <textarea placeholder="Message"></textarea>
+                                <button type="submit">SUBMIT</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Newsletter Section End -->
 
         <!-- Footer Section Start -->
         <footer>
