--- a/aboutUs.html
+++ b/aboutUs.html
@@ -102,7 +102,9 @@
                    <div class="row h-100 align-items-center text-center">
                       <div class="heading">
                          <h1>ABOUT US</h1>
-                         <p>Home >> <span>About Us</span></p>
+                         <a href="index.html">Home</a>
+                         <span> >> </span>
+                         <a class="a2a" href="aboutUs.html">About Us</a>
                       </div>
                    </div>
                 </div>
