--- a/contactUs.html
+++ b/contactUs.html
@@ -102,7 +102,9 @@
                    <div class="row h-100 align-items-center text-center">
                       <div class="heading">
                          <h1>contact us</h1>
-                         <p>Home >> <span>contact us</span></p>
+                         <a href="index.html">Home</a>
+                         <span> >> </span>
+                         <a class="a2a" href="contactUs.html">Contact Us</a>
                       </div>
                    </div>
                 </div>
