--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,9 @@
                    <div class="row h-100 align-items-center text-center">
                       <div class="heading">
                          <h1>OUR PORTFOLIO</h1>
-                         <p>Home >> <span>Portfolio</span></p>
+                         <a href="index.html">Home</a>
+                         <span> >> </span>
+                         <a class="a2a" href="portfolio.html">Portfolio</a>
                       </div>
                    </div>
                 </div>
