--- a/aboutUs.html
+++ b/aboutUs.html
@@ -80,7 +80,7 @@
                         <a href="portfolio.html" class="nav-link">Portfolio</a>
                      </li>
                      <li class="nav-item">
-                        <a href="#" class="nav-link">Our Blog</a>
+                        <a href="ourBlog.html" class="nav-link">Our Blog</a>
                      </li>
                      <li class="nav-item">
                         <a href="contactUs.html" class="nav-link">Contact Us</a>
