--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,8 @@
       <link rel="stylesheet" href="./assets/css/slick.min.css">
       <!-- Bootstrap Css Link -->
       <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+      <!-- Venobox Css Link -->
+      <link rel="stylesheet" href="./assets/css/venobox.min.css">
       <!-- Main Css Link -->
       <link rel="stylesheet" href="./assets/css/style.css">
       <!-- Responsive Css Link -->
@@ -440,6 +442,8 @@
         <!-- Counter Up Js link -->
         <script src="./assets/js/waypoints.min.js"></script>
         <script src="./assets/js/jquery.counterup.min.js"></script>
+        <!-- Venobox JS link -->
+        <script src="./assets/js/venobox.min.js"></script>
         <!-- Main Js Link -->
         <script src="./assets/js/script.js"></script>
 
