blog details page add

--- a/blogDetails.html
+++ b/blogDetails.html
@@ -103,10 +103,10 @@
                 <div class="container h-100">
                    <div class="row h-100 align-items-center text-center">
                       <div class="heading">
-                         <h1>Blog List View</h1>
-                         <a href="index.html">Home</a>
+                         <h1>Blog Details</h1>
+                         <a href="ourBlog.html">BLog List View</a>
                          <span> >> </span>
-                         <a class="a2a" href="ourBlog.html">Blog List View</a>
+                         <a class="a2a" href="blogDetails.html">Blog Details</a>
                       </div>
                    </div>
                 </div>
@@ -166,83 +166,9 @@
                 <div class="row">
                     <div class="blog_view col-lg-8 px-0">
                         <div class="blog_items">
-                            <img src="assets/images/bloglistView_image01.png" alt="" class="img-fluid">
-                            <div class="blog_details">
-                                <h4>Finding New Buildings in the Dust of the Old Never Seen Before</h4>
-                                <div class="d-flex">
-                                    <div>
-                                       <a href="#">
-                                          <i class="fa-solid fa-user"></i>
-                                          By: Admin
-                                       </a>
-                                    </div>
-                                    <div class="ms-auto">
-                                       <a class="px-3" href="#">
-                                          <i class="fa-solid fa-thumbs-up"></i>
-                                          2.5 k Likes
-                                       </a>
-                                       <a href="#">
-                                          <i class="fa-solid fa-comments"></i>
-                                          1.5 k Comments 
-                                       </a>
-                                    </div>
-                                </div>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsumas been the duy's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrabled it to make a type specimen book. It has survived not only fiventuries, but also the leap into electronicting, ning essentially unchanged. It was popularised in the 1960s with the release year.</p>
-                                <a class="read_more" href="#">READ MORE</a>
-                            </div>
+                            <img src="assets/images/bloglistView_image02.png" alt="" class="img-fluid">
+                            
                         </div>
-                        <div class="blog_items">
-                           <img src="assets/images/bloglistView_image02.png" alt="" class="img-fluid">
-                           <div class="blog_details">
-                               <h4>Finding New Buildings in the Dust of the Old Never Seen Before</h4>
-                               <div class="d-flex">
-                                   <div>
-                                      <a href="#">
-                                         <i class="fa-solid fa-user"></i>
-                                         By: Admin
-                                      </a>
-                                   </div>
-                                   <div class="ms-auto">
-                                      <a class="px-3" href="#">
-                                         <i class="fa-solid fa-thumbs-up"></i>
-                                         2.5 k Likes
-                                      </a>
-                                      <a href="#">
-                                         <i class="fa-solid fa-comments"></i>
-                                         1.5 k Comments 
-                                      </a>
-                                   </div>
-                               </div>
-                               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsumas been the duy's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrabled it to make a type specimen book. It has survived not only fiventuries, but also the leap into electronicting, ning essentially unchanged. It was popularised in the 1960s with the release year.</p>
-                               <a class="read_more" href="#">READ MORE</a>
-                           </div>
-                       </div>
-                       <div class="blog_items">
-                        <img src="assets/images/bloglistView_image03.png" alt="" class="img-fluid">
-                        <div class="blog_details">
-                            <h4>Finding New Buildings in the Dust of the Old Never Seen Before</h4>
-                            <div class="d-flex">
-                                <div>
-                                   <a href="#">
-                                      <i class="fa-solid fa-user"></i>
-                                      By: Admin
-                                   </a>
-                                </div>
-                                <div class="ms-auto">
-                                   <a class="px-3" href="#">
-                                      <i class="fa-solid fa-thumbs-up"></i>
-                                      2.5 k Likes
-                                   </a>
-                                   <a href="#">
-                                      <i class="fa-solid fa-comments"></i>
-                                      1.5 k Comments 
-                                   </a>
-                                </div>
-                            </div>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsumas been the duy's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrabled it to make a type specimen book. It has survived not only fiventuries, but also the leap into electronicting, ning essentially unchanged. It was popularised in the 1960s with the release year.</p>
-                            <a class="read_more" href="#">READ MORE</a>
-                        </div>
-                    </div>
                     </div>
 
                     <div class="blog_keywords col-lg-4 px-0 ps-lg-5">
@@ -539,14 +465,6 @@
             </div>
         </section>
         <!-- Blog Main  Section End -->
-
-        <!-- Next Page Section Start -->
-        <section id="nxt">
-            <div class="container">
-                <a href="blogDetails.html">NEXT PAGE</a>
-            </div>
-        </section>
-        <!-- Next Page Section End -->
 
         <!-- Footer Section Start -->
         <footer>
